--- a/src/app.css
+++ b/src/app.css
@@ -1,13 +1,13 @@
 .container
 {
     text-align: center;
-    
 }
 .myform
 {
-    width: 30%;
+    width: 40%;
     margin: auto;
-    margin-top: 10%;
+    margin-top: 6%;
+    padding: 2% 3% 2% 3%;
 }
 
 .mainContainer
@@ -39,4 +39,13 @@
     margin-left: 1rem;
     margin-right: 1rem;
     font-size:20px;
+}
+
+.successOrder
+{
+    width: 80%;
+    margin: auto;
+    margin-top: 6%;
+    padding: 2% 3% 2% 3%;
+    color:green;
 }
